--- a/website/pages/docs/detectOverflow.mdx
+++ b/website/pages/docs/detectOverflow.mdx
@@ -18,8 +18,9 @@ await detectOverflow(middlewareArguments, options);
 
 ## Usage
 
-Inside your custom middleware, make your `fn` `async` and `await`
-it, passing in the `middlewareArguments`:
+Inside your custom middleware, make your `fn{:.function}`
+`async{:.keyword}` and `await{:js}` it, passing in the
+`middlewareArguments{:.param}`:
 
 ```js
 import {detectOverflow} from '@floating-ui/dom';
@@ -33,18 +34,19 @@ const middleware = {
 };
 ```
 
-The returned value, `overflow`, is a `SideObject` containing side
-properties with numbers representing offsets.
+The returned value, `overflow{:.const}`, is a
+`SideObject{:.class}` containing side properties with numbers
+representing offsets.
 
 - A positive number means the element is overflowing the clipping
   boundary by that number of pixels.
 - A negative number means the element has that number of pixels
   left before it will overflow the clipping boundary.
-- `0` means the side lies flush with the clipping boundary.
+- `0{:js}` means the side lies flush with the clipping boundary.
 
 ## Options
 
-`detectOverflow` takes options as a second argument.
+`detectOverflow{:.function}` takes options as a second argument.
 
 ```js
 await detectOverflow(middlewareArguments, {
@@ -59,9 +61,10 @@ type Boundary = 'clippingParents' | Element | Array<Element>;
 ```
 
 This describes the clipping element(s) that overflow will be
-checked relative to. The default is `clippingParents`, which are
-the scrolling containers (including `overflow: hidden` elements)
-which will cause the reference or floating element to be clipped.
+checked relative to. The default is `'clippingParents'{:js}`,
+which are the scrolling containers (including
+`overflow: hidden{:sass}` elements) which will cause the
+reference or floating element to be clipped.
 
 ```js
 await detectOverflow(middlewareArguments, {
@@ -76,9 +79,10 @@ type RootBoundary = 'viewport' | 'document';
 ```
 
 This describes the root boundary that the element will be checked
-for overflow relative to. The default is `viewport`, which is the
-area of the page the user can see on the screen. The other option
-is `document`, which is the entire page outside the viewport.
+for overflow relative to. The default is `'viewport'{:js}`, which
+is the area of the page the user can see on the screen. The other
+option is `'document'{:js}`, which is the entire page outside the
+viewport.
 
 ```js
 await detectOverflow(middlewareArguments, {
@@ -123,8 +127,8 @@ type ElementContext = 'reference' | 'floating';
 By default, the floating element is the one being checked for
 overflow.
 
-But you can also change the context to `reference` to instead
-check its overflow relative to its clipping boundary.
+But you can also change the context to `'reference'{:js}` to
+instead check its overflow relative to its clipping boundary.
 
 ```js
 await detectOverflow(middlewareArguments, {
@@ -135,13 +139,13 @@ await detectOverflow(middlewareArguments, {
 ### altBoundary
 
 This is a boolean value which determines whether to check the
-alternate `elementContext`'s boundary.
+alternate `elementContext{:.objectKey}`'s boundary.
 
-For instance, if the `elementContext` is `floating`, and you
-enable this option, then the boundary in which overflow is
-checked for is the `reference`'s boundary. This only applies if
-you are using the default `clippingParents` enum as the
-`boundary`.
+For instance, if the `elementContext{:.objectKey}` is
+`'floating'{:js}`, and you enable this option, then the boundary
+in which overflow is checked for is the `'reference'{:js}`'s
+boundary. This only applies if you are using the default
+`'clippingParents'{:js}` enum as the `boundary{:.objectKey}`.
 
 ```js
 await detectOverflow(middlewareArguments, {
