--- a/website/pages/docs/getting-started.mdx
+++ b/website/pages/docs/getting-started.mdx
@@ -34,8 +34,8 @@ yarn add @floating-ui/dom
 
 ## CDN
 
-Floating UI can be used via the `unpkg` CDN by adding `<script>`
-tags to your document before your own scripts:
+Floating UI can be used via the `unpkg` CDN by adding
+`<script>{:html}` tags to your document before your own scripts:
 
 ```html
 <script src="https://unpkg.com/@floating-ui/core@0"></script>
@@ -45,7 +45,8 @@ tags to your document before your own scripts:
 > Important: you should open each link to retrieve the latest
 > version to lock it to that version.
 
-All exports will then be available on `window.FloatingUIDOM`.
+All exports will then be available on
+`window.FloatingUIDOM{:js}`.
 
 ## Tutorial
 
