--- a/website/pages/docs/middleware.mdx
+++ b/website/pages/docs/middleware.mdx
@@ -8,8 +8,8 @@ coordinates in some fashion, or provide useful data for the
 consumer to use. Most of Floating UI's features are implemented
 as a middleware.
 
-`computePosition()` starts with basic positioning via
-`placement`:
+`computePosition(){:js}` starts with basic positioning via
+`placement{:.objectKey}`:
 
 ```js
 computePosition(referenceEl, floatingEl, {
@@ -37,8 +37,8 @@ const shiftByOnePixel = {
 ```
 
 This simple (but not particularly useful) middleware just adds
-`1` pixel to the coordinates. To use this middleware, add it to
-your `middleware` array:
+`1{:js}` pixel to the coordinates. To use this middleware, add it
+to your `middleware{:.objectKey}` array:
 
 ```js
 computePosition(referenceEl, floatingEl, {
@@ -47,23 +47,25 @@ computePosition(referenceEl, floatingEl, {
 });
 ```
 
-Here, `computePosition` will compute coordinates that will place
-the floating element to the right of the reference element, lying
-flush with it. Middleware are then executed, resulting in these
-coordinates getting shifted by one pixel. Then that data is
+Here, `computePosition(){:js}` will compute coordinates that will
+place the floating element to the right of the reference element,
+lying flush with it. Middleware are then executed, resulting in
+these coordinates getting shifted by one pixel. Then that data is
 returned to the caller.
 
 ### Shape
 
-A middleware is an object which has a `name` property and a `fn`
-property. The `fn` property provides the logic of the middleware,
-which returns new positioning coordinates or useful data.
+A middleware is an object which has a `name{:.objectKey}`
+property and a `fn{:.function}` property. The `fn{:.function}`
+property provides the logic of the middleware, which returns new
+positioning coordinates or useful data.
 
 ### Data
 
-Any data can be passed via an optional `data` property of the
-object that is returned from `fn`. This will be accessible to the
-consumer via the `middlewareData` property:
+Any data can be passed via an optional `data{:.objectKey}`
+property of the object that is returned from `fn{:.function}`.
+This will be accessible to the consumer via the
+`middlewareData{:.param}` property:
 
 ```js {7-9}
 const shiftByOnePixel = {
@@ -112,19 +114,20 @@ const middleware = [shiftByAmount(10)];
 
 ### Always return an object
 
-Inside `fn` make sure to return an object. It doesn't need to
-contain properties, but to remind you that it should be pure, you
-must return an object. Never mutate any values that get passed in
-from `fn`.
+Inside `fn{:.function}` make sure to return an object. It doesn't
+need to contain properties, but to remind you that it should be
+pure, you must return an object. Never mutate any values that get
+passed in from `fn{:.function}`.
 
 ## MiddlewareArguments
 
-An object is passed to `fn` containing useful data about the
-middleware lifecycle being executed.
+An object is passed to `fn{:.function}` containing useful data
+about the middleware lifecycle being executed.
 
-In the previous examples, we destructured `x` and `y` out of the
-`fn` parameter object. These are only two properties that get
-passed into middleware, but there are many more.
+In the previous examples, we destructured `x{:.param}` and
+`y{:.param}` out of the `fn{:.function}` parameter object. These
+are only two properties that get passed into middleware, but
+there are many more.
 
 The properties passed are below:
 
@@ -156,15 +159,16 @@ This is an object containing the reference and floating elements.
 
 ### rects
 
-This is an object containing the `Rect`s of the reference and
-floating elements, an object of shape `{width, height, x, y}`.
+This is an object containing the `Rect{:.class}`s of the
+reference and floating elements, an object of shape
+`{width, height, x, y}`.
 
 ### middlewareData
 
 This is an object containing all the data of any middleware at
 the current step in the lifecycle. The lifecycle loops over the
-`middleware` array, so later middleware have access to data from
-any middleware run prior.
+`middleware{:.objectKey}` array, so later middleware have access
+to data from any middleware run prior.
 
 ### strategy
 
@@ -173,12 +177,13 @@ The positioning strategy.
 ### initialPlacement
 
 The initial (or preferred) placement passed in to
-`computePosition()`.
+`computePosition(){:js}`.
 
 ### placement
 
-The stateful resultant placement. Middleware like `flip` change
-`initialPlacement` to a new one.
+The stateful resultant placement. Middleware like
+`flip{:.function}` change `initialPlacement{:.objectKey}` to a
+new one.
 
 ### platform
 
@@ -196,8 +201,8 @@ Understanding this can help in knowing which order to place
 middleware in, as placing a middleware before or after another
 can produce a different result.
 
-In general, `offset` should always go before other middleware,
-while `arrow` after other middleware.
+In general, `offset{:.function}` should always go before other
+middleware, while `arrow{:.function}` after other middleware.
 
 ```js
 const middleware = [
@@ -211,12 +216,12 @@ const middleware = [
 
 There are use cases for needing to reset the lifecycle and start
 the process over again when you want to change the placement.
-Both `flip` and `autoPlacement` use this, so that other
-middleware which modify the coordinates based on the current
-`placement` do not perform stale logic.
+Both `flip{:.function}` and `autoPlacement{:.function}` use this,
+so that other middleware which modify the coordinates based on
+the current `placement{:.objectKey}` do not perform stale logic.
 
-In order to do this, add a `reset` property to the returned
-object from `fn`:
+In order to do this, add a `reset{:.objectKey}` property to the
+returned object from `fn{:.function}`:
 
 ```js
 const middleware = {
@@ -235,12 +240,14 @@ const middleware = {
 };
 ```
 
-> Ensure `someCondition` will evaluate to `false` at some point,
-> otherwise, this will cause an **infinite loop!** Only specify
-> the `reset` property if you intend to change the `placement`.
-> When running the library in DEV mode, an error will be thrown
-> to prevent an infinite loop from locking up your application.
+> Ensure `someCondition{:js}` will evaluate to `false{:js}` at
+> some point, otherwise, this will cause an **infinite loop!**
+> Only specify the `reset{:.objectKey}` property if you intend to
+> change the `placement{:.objectKey}`. When running the library
+> in DEV mode, an error will be thrown to prevent an infinite
+> loop from locking up your application.
 
-Data supplied to `middlewareData` is **preserved** by doing this,
-so you can read it at any point after you've reset the lifecycle,
-e.g. if you want to add a `skip` property to break the condition.
+Data supplied to `middlewareData{:.param}` is **preserved** by
+doing this, so you can read it at any point after you've reset
+the lifecycle, e.g. if you want to add a `skip{:.objectKey}`
+property to break the condition.
