--- a/website/pages/docs/misc.mdx
+++ b/website/pages/docs/misc.mdx
@@ -5,9 +5,10 @@ export default Layout;
 
 ## Subpixel and accelerated positioning
 
-Instead of `top` and `left` as shown throughout the docs, you can
-use `transform: translate()` instead to position the floating
-element for increased performance.
+Instead of `top{:.objectKey}` and `left{:.objectKey}` as shown
+throughout the docs, you can use `transform: translate(){:sass}`
+instead to position the floating element for increased
+performance.
 
 ```js
 Object.assign(floatingEl.style, {
@@ -17,10 +18,10 @@ Object.assign(floatingEl.style, {
 });
 ```
 
-`x` and `y` can contain decimals, so unless the `transform`
-translation is placed evenly on the device's subpixel grid, then
-there will be blurring. You can check `window.devicePixelRatio`
-to round by DPR.
+`x` and `y` can contain decimals, so unless the
+`transform{:.objectKey}` translation is placed evenly on the
+device's subpixel grid, then there will be blurring. You can
+check `window.devicePixelRatio{:js}` to round by DPR.
 
 ### 3D transforms
 
@@ -36,17 +37,18 @@ Object.assign(floatingEl.style, {
 ```
 
 If you're animating the location of the floating element, using
-`transform` will offer smoother animations.
+`transform{:.function}` will offer smoother animations.
 
 ## Transforms on elements
 
-A `transform` on a reference element will not cause any
-positioning issues. You should be wary of these cases though:
+A `transform{:.function}` on a reference element will not cause
+any positioning issues. You should be wary of these cases though:
 
 ### floating
 
 If the floating element has a `scale` transform, ensure you
-specify a `transform-origin` depending on its placement.
+specify a `transform-origin{:.function}` depending on its
+placement.
 
 ### parent
 
@@ -56,7 +58,7 @@ element outside of the scaled parent context.
 
 ### body
 
-If `<body>` is translated, the position will be offset by that
-amount. It's possible to create your own custom middleware to
-handle these types of cases if necessary, but for most users it
-is not relevant.
+If `<body>{:html}` is translated, the position will be offset by
+that amount. It's possible to create your own custom middleware
+to handle these types of cases if necessary, but for most users
+it is not relevant.
