--- a/website/pages/docs/tutorial.mdx
+++ b/website/pages/docs/tutorial.mdx
@@ -14,9 +14,9 @@ If you just want to start learning about the API, skip to the
 
 ## Setting up
 
-Create a new HTML document with two elements, a `<button>` and a
-tooltip `<div>` along with the `unpkg` CDN scripts to load
-Floating UI:
+Create a new HTML document with two elements, a `<button>{:html}`
+and a tooltip `<div>{:html}` along with the `unpkg` CDN scripts
+to load Floating UI:
 
 ```html
 <!DOCTYPE html>
@@ -77,16 +77,16 @@ Here's the result so far:
 
 ## Making the tooltip "float"
 
-Your tooltip `<div />` is a regular block on the document, like
-any other element, which is why it spans the whole width of the
-page.
+Your tooltip `<div>{:html}` is a regular block on the document,
+like any other element, which is why it spans the whole width of
+the page.
 
 We want it to **float** on top of the UI though, so it doesn't
 disrupt the flow of the document, and should only take up as much
 size as its contents.
 
-We can do this in CSS by setting `position: absolute` on the
-tooltip element.
+We can do this in CSS by setting `position: absolute{:sass}` on
+the tooltip element.
 
 ```css {2}
 #tooltip {
@@ -97,6 +97,7 @@ tooltip element.
   padding: 5px;
   border-radius: 4px;
   font-size: 90%;
+  pointer-events: none;
 }
 ```
 
@@ -107,7 +108,7 @@ much size as it needs to and is overlaid on top of the UI.
 
 ## Positioning
 
-Inside your `<script>` tag, add the following code:
+Inside your `<script>{:html}` tag, add the following code:
 
 ```js
 // First, select the elements on the document
@@ -125,13 +126,14 @@ computePosition(button, tooltip).then(({x, y}) => {
 });
 ```
 
-Above, we call `computePosition()` (after destructuring it from
-`window.FloatingUIDOM`) with the button and tooltip elements as
-arguments.
+Above, we call `computePosition(){:js}` (after destructuring it
+from `window.FloatingUIDOM{:js}`) with the button and tooltip
+elements as arguments.
 
-It returns a `Promise`, so we use the `.then()` method which
-passes in the calculated `x` and `y` coordinates for us, which we
-use to assign `left` and `top` styles to the tooltip.
+It returns a `Promise{:.class}`, so we use the `.then(){:js}`
+method which passes in the calculated `x{:.param}` and
+`y{:.param}` coordinates for us, which we use to assign
+`left{:.objectKey}` and `top{:.objectKey}` styles to the tooltip.
 
 Our tooltip is now centered underneath the button:
 
@@ -139,10 +141,10 @@ Our tooltip is now centered underneath the button:
 
 ## Placements
 
-The default placement is `bottom`, but you probably want to place
-the tooltip anywhere relative to the button. For this, Floating
-UI has the `placement` option, passed into the options object as
-a third argument:
+The default placement is `'bottom'{:js}`, but you probably want
+to place the tooltip anywhere relative to the button. For this,
+Floating UI has the `placement{:.objectKey}` option, passed into
+the options object as a third argument:
 
 ```js {7}
 const button = document.querySelector('#button');
@@ -162,26 +164,26 @@ computePosition(button, tooltip, {
 
 <T.Result5 />
 
-The available base placements are `top`, `right`, `bottom`,
-`left`.
+The available base placements are `'top'{:js}`, `'right'{:js}`,
+`'bottom'{:js}`, `'left'{:js}`.
 
 Each of these base placements has an alignment in the form
-`-start` and `-end`. For example, `right-start`, or `bottom-end`.
-These allow you to align the tooltip to the button, rather than
-centering it.
+`-start` and `-end`. For example, `'right-start'{:js}`, or
+`'bottom-end'{:js}`. These allow you to align the tooltip to the
+button, rather than centering it.
 
 ## Our first problem
 
 These placements are a useful feature themselves, but they don't
 offer anything over raw CSS. Which brings us to our first
-problem: what happens if we use a `top` placement?
+problem: what happens if we use a `'top'{:js}` placement?
 
 <T.Result6 />
 
 We can't read the tooltip text because the button happens to be
 close to the document boundary. In this case, you could use the
-`bottom` placement, instead of `top`. Again, you _could_ just use
-CSS for this.
+`'bottom'{:js}` placement, instead of `'top'{:js}`. Again, you
+_could_ just use CSS for this.
 
 However, needing to **manually** handle this for every single
 tooltip you add in an application can be cumbersome. This is
@@ -199,14 +201,14 @@ Middleware are how every single feature beyond the basic
 placement positioning is implemented.
 
 A middleware is a piece of code which runs between the call of
-`computePosition()` and its eventual return, to modify or provide
-data to the consumer.
+`computePosition(){:js}` and its eventual return, to modify or
+provide data to the consumer.
 
-`flip()` modifies the coordinates for us such that it uses the
-`bottom` placement automatically without us needing to explicitly
-specify it.
+`flip(){:js}` modifies the coordinates for us such that it uses
+the `'bottom'{:js}` placement automatically without us needing to
+explicitly specify it.
 
-```js {1,5}
+```js /flip/ {1,5}
 const {computePosition, flip} = FloatingUIDOM;
 
 computePosition(button, tooltip, {
@@ -220,14 +222,16 @@ computePosition(button, tooltip, {
 });
 ```
 
-Now, even though we've set `placement` to `top`, the tooltip
-flips to the bottom automatically for us if it can't fit on the
-top. No need to adjust anything manually.
+Now, even though we've set `placement{:.objectKey}` to
+`'top'{:js}`, the tooltip flips to the bottom automatically for
+us if it can't fit on the top. No need to adjust anything
+manually.
 
 <T.Result7 />
 
-Importantly, it will continue to use the `top` placement at all
-times if it can, and only fallback to `bottom` if it has to.
+Importantly, it will continue to use the `'top'{:js}` placement
+at all times if it can, and only fallback to `'bottom'{:js}` if
+it has to.
 
 ### Shift middleware
 
@@ -246,9 +250,10 @@ opposite axis (`x` instead of `y`). Because it's **centered**
 beneath the button, and the tooltip happens to be wider than the
 button, it ends up overflowing the edge.
 
-To solve this problem, we have the `shift` middleware:
+To solve this problem, we have the `shift{:.function}`
+middleware:
 
-```js {1,5}
+```js /shift/ {1,5}
 const {computePosition, flip, shift} = FloatingUIDOM;
 
 computePosition(button, tooltip, {
@@ -264,13 +269,13 @@ computePosition(button, tooltip, {
 
 <T.Result9 />
 
-Now, we can read all the text because the `shift` middleware
-"shifted" the tooltip from its bottom centered placement until it
-was fully in view.
+Now, we can read all the text because the `shift{:.function}`
+middleware "shifted" the tooltip from its bottom centered
+placement until it was fully in view.
 
 As you can see, the tooltip lies fully flush with the edge of the
 document boundary. To add some whitespace, or padding, the
-`shift` middleware accepts an options object:
+`shift{:.function}` middleware accepts an options object:
 
 ```js {5}
 const {computePosition, flip, shift} = FloatingUIDOM;
@@ -294,9 +299,10 @@ the edge of the boundary.
 ### Offset middleware
 
 We probably also don't want the tooltip to lie flush with the
-button element. For this, we have the `offset` middleware:
+button element. For this, we have the `offset{:.function}`
+middleware:
 
-```js {1,5}
+```js /offset/ {1,5}
 const {computePosition, flip, shift, offset} = FloatingUIDOM;
 
 computePosition(button, tooltip, {
@@ -314,18 +320,20 @@ This will displace the tooltip 6px from the reference element:
 
 <T.Result11 />
 
-> Notice that we put `offset` at the start of the array, rather
-> than at the end? Middleware behavior is dependent on **order**.
-> Each middleware returns new coordinates which middleware later
-> in the array will use. The `offset` middleware is one that
-> should be before most other ones, because they should modify
-> their coordinates based on the offsetted ones.
+> Notice that we put `offset{:.function}` at the start of the
+> array, rather than at the end? Middleware behavior is dependent
+> on **order**. Each middleware returns new coordinates which
+> middleware later in the array will use. The
+> `offset{:.function}` middleware is one that should be before
+> most other ones, because they should modify their coordinates
+> based on the offsetted ones.
 
 ### Arrow middleware
 
 Most tooltips have an arrow (or triangle / caret) which points
-toward the button. For this, we have the `arrow` middleware, but
-we first need to add a new element inside of our tooltip:
+toward the button. For this, we have the `arrow{:.function}`
+middleware, but we first need to add a new element inside of our
+tooltip:
 
 ```html
 <div id="tooltip" role="tooltip">
@@ -346,9 +354,10 @@ Then style it:
 }
 ```
 
-Then pass the arrow element into the `arrow` middleware:
+Then pass the arrow element into the `arrow{:.function}`
+middleware:
 
-```js {1,3,12}
+```js /arrow/2 {1,3,12}
 const arrowElement = document.querySelector('#arrow');
 
 const {computePosition, flip, shift, offset, arrow} =
@@ -357,7 +366,7 @@ const {computePosition, flip, shift, offset, arrow} =
 computePosition(button, tooltip, {
   placement: 'top',
   middleware: [
-    offset(5),
+    offset(6),
     flip(),
     shift({padding: 5}),
     arrow({element: arrowElement}),
@@ -371,19 +380,19 @@ computePosition(button, tooltip, {
 ```
 
 Now we need to add dynamic styles to the arrow element. Unlike
-other middleware, the `arrow` middleware doesn't modify the main
-`x` and `y` coordinates. Instead, it provides **data** for us to
-use. We can access this piece of information provided via
-`middlewareData`.
+other middleware, the `arrow{:.function}` middleware doesn't
+modify the main `x{:.param}` and `y{:.param}` coordinates.
+Instead, it provides **data** for us to use. We can access this
+piece of information provided via `middlewareData{:.param}`.
 
 This contains an `arrow` object, referring to the name of the
-`arrow()` middleware we used:
+`arrow(){:js}` middleware we used:
 
 ```js {9,15-16}
 computePosition(button, tooltip, {
   placement: 'top',
   middleware: [
-    offset(5),
+    offset(6),
     flip(),
     shift({padding: 5}),
     arrow({element: arrowElement}),
@@ -405,7 +414,7 @@ We now want to use this data to apply the styles.
 computePosition(button, tooltip, {
   placement: 'top',
   middleware: [
-    offset(5),
+    offset(6),
     flip(),
     shift({padding: 5}),
     arrow({element: arrowElement}),
@@ -440,17 +449,18 @@ The styles above will handle the arrow's position for all
 placements.
 
 - `x` is the x-axis offset, only existing if the placement is
-  vertical (`top` or `bottom`).
+  vertical (`'top'{:js}` or `'bottom'{:js}`).
 - `y` is the y-axis offset, only existing if the placement is
-  horizontal (`right` or `left`).
+  horizontal (`'right'{:js}` or `'left'{:js}`).
 
-`staticSide` depends on the `placement` that gets chosen. For
-instance, if the placement is `bottom`, then we want the arrow to
-be positioned 4px outside of the **top** of the tooltip (so we
-use a negative number).
+`staticSide{:js}` depends on the `placement` that gets chosen.
+For instance, if the placement is `'bottom'{:js}`, then we want
+the arrow to be positioned 4px outside of the **top** of the
+tooltip (so we use a negative number).
 
-The reason we use `.split('-')[0]` is to also handle aligned
-placements, like `top-start` rather than only `top`.
+The reason we use `.split('-')[0]{:js}` is to also handle aligned
+placements, like `'top-start'{:js}` rather than only
+`'top'{:js}`.
 
 <T.Result12 />
 
@@ -458,7 +468,7 @@ placements, like `top-start` rather than only `top`.
 
 Now that the tooltip has everything positioned, we can add
 **behavior**. The following code will show the tooltip on the
-`showEvents`, then hide it on the `hideEvents`:
+`showEvents{:.const}`, then hide it on the `hideEvents{:.const}`:
 
 ```css {2}
 #tooltip {
