--- a/website/pages/docs/virtual-elements.mdx
+++ b/website/pages/docs/virtual-elements.mdx
@@ -10,8 +10,8 @@ context menus or following the cursor.
 ## Usage
 
 A virtual element is a plain object that has a
-`getBoundingClientRect` property, which mimics a real element's
-one:
+`getBoundingClientRect{:.function}` property, which mimics a real
+element's one:
 
 ```js
 // A virtual element which is 20 x 20 px, starting from (0, 0)
@@ -72,7 +72,7 @@ const virtualEl = {
 ```
 
 This may be required if your virtual element's
-`getBoundingClientRect` data is **derived** from a real element's
-one. For instance, you're modifying a real reference element's
-`getBoundingClientRect` in some way, and using a virtual element
-enables this.
+`getBoundingClientRect{:.function}` data is **derived** from a
+real element's one. For instance, you're modifying a real
+reference element's `getBoundingClientRect{:.function}` in some
+way, and using a virtual element enables this.
