fix: improve word highlighting

--- a/website/pages/docs/react-native.mdx
+++ b/website/pages/docs/react-native.mdx
@@ -164,7 +164,7 @@ const {refs} = useFloating();
 
 A `ref{:.const}` can be passed as the `element{:.objectKey}`:
 
-```jsx /arrowRef/1,2 {11}
+```jsx /arrow/ {11}
 import {useRef} from 'react';
 import {useFloating, arrow} from '@floating-ui/react-native';
 
