docs: document middleware updating in React

--- a/website/pages/docs/react-native.mdx
+++ b/website/pages/docs/react-native.mdx
@@ -179,3 +179,9 @@ function App() {
   // Pass the `arrowRef` to the element
 }
 ```
+
+## Updating middleware
+
+If you intend to make `middleware` dynamic, ensure you call
+`update()` whenever the state changes to compute the new
+position.
