--- a/website/pages/docs/react-dom.mdx
+++ b/website/pages/docs/react-dom.mdx
@@ -207,3 +207,9 @@ function App() {
   );
 }
 ```
+
+## Updating middleware
+
+If you intend to make `middleware` dynamic, ensure you call
+`update()` whenever the state changes to compute the new
+position.
