--- a/website/pages/docs/size.mdx
+++ b/website/pages/docs/size.mdx
@@ -3,8 +3,9 @@ export default Layout;
 
 # size
 
-The `size` middleware provides data to change the size of the
-floating element so it doesn't overflow the available space.
+The `size{:.function}` middleware provides data to change the
+size of the floating element so it doesn't overflow the available
+space.
 
 <div className="flex flex-col gap-4">
   <Chrome center scrollable className="h-96">
