--- a/website/pages/docs/motivation.mdx
+++ b/website/pages/docs/motivation.mdx
@@ -54,9 +54,9 @@ The differences are summarized as follows:
   on the order of the array, and that's up to you.
 - **More features**: New features are easier to support thanks to
   the new architecture, and Floating UI already offers more, like
-  the `size` middleware. Importantly, new features are
-  tree-shaken away even if you don't use them, so there's no size
-  cost.
+  the `size{:.function}` middleware. Importantly, new features
+  are tree-shaken away even if you don't use them, so there's no
+  size cost.
 - **More predictable**: Floating UI doesn't perform any "magic",
   like adding event listeners to update the position, or
   auto-ordering the modifiers array. This means you use Floating
