--- a/website/pages/docs/tutorial.mdx
+++ b/website/pages/docs/tutorial.mdx
@@ -277,7 +277,7 @@ As you can see, the tooltip lies fully flush with the edge of the
 document boundary. To add some whitespace, or padding, the
 `shift{:.function}` middleware accepts an options object:
 
-```js {5}
+```js /padding/ {5}
 const {computePosition, flip, shift} = FloatingUIDOM;
 
 computePosition(button, tooltip, {
@@ -453,10 +453,10 @@ placements.
 - `y` is the y-axis offset, only existing if the placement is
   horizontal (`'right'{:js}` or `'left'{:js}`).
 
-`staticSide{:js}` depends on the `placement` that gets chosen.
-For instance, if the placement is `'bottom'{:js}`, then we want
-the arrow to be positioned 4px outside of the **top** of the
-tooltip (so we use a negative number).
+`staticSide{:js}` depends on the `placement{:.objectKey}` that
+gets chosen. For instance, if the placement is `'bottom'{:js}`,
+then we want the arrow to be positioned 4px outside of the
+**top** of the tooltip (so we use a negative number).
 
 The reason we use `.split('-')[0]{:js}` is to also handle aligned
 placements, like `'top-start'{:js}` rather than only
