--- a/website/pages/docs/react-native.mdx
+++ b/website/pages/docs/react-native.mdx
@@ -23,7 +23,7 @@ yarn add @floating-ui/react-native
 
 ## Usage
 
-The `useFloating()` hook accepts all of
+The `useFloating(){:js}` hook accepts all of
 [computePosition's options](/docs/computePosition#options).
 
 ```jsx
@@ -56,17 +56,17 @@ function App() {
 }
 ```
 
-`x` and `y` will be `null` initially, before the layout effect
-has fired.
+`x{:.const}` and `y{:.const}` will be `null` initially, before
+the layout effect has fired.
 
 ## ScrollView
 
-When your floating element is `Portal`ed to the App root, while
-the reference element is inside a `<ScrollView />`, you pass the
-`sameScrollView` option, and spread `scrollProps` to the
-component:
+When your floating element is portaled to the app root, while the
+reference element is inside a `<ScrollView />{:jsx}`, you pass
+the `sameScrollView{:.objectKey}` option, and spread
+`scrollProps{:.const}` to the component:
 
-```jsx {5,7,12}
+```jsx /scrollProps/ {7}
 import {View, Text, ScrollView} from 'react-native';
 import {useFloating} from '@floating-ui/react-native';
 
@@ -101,9 +101,10 @@ function App() {
 
 ## offsetParent
 
-Pass this to the floating element's `offsetParent`, if required:
+Pass this to the floating element's `offsetParent{:.const}`, if
+required:
 
-```jsx {5,18}
+```jsx /offsetParent/
 import {View, Text, ScrollView} from 'react-native';
 import {useFloating} from '@floating-ui/react-native';
 
@@ -140,14 +141,15 @@ function App() {
 
 ## Updating
 
-The hook returns an `update()` function to update the position:
+The hook returns an `update(){:js}` function to update the
+position:
 
 ```js
 const {update} = useFloating();
 ```
 
-In addition, the `refs` containing the actual elements are passed
-back:
+In addition, the `refs{:.const}` containing the actual elements
+are passed back:
 
 ```js
 const {refs} = useFloating();
@@ -160,9 +162,9 @@ const {refs} = useFloating();
 
 ## Arrow
 
-A `ref` can be passed as the `element`:
+A `ref{:.const}` can be passed as the `element{:.objectKey}`:
 
-```jsx {5,9,11}
+```jsx /arrowRef/ {11}
 import {useRef} from 'react';
 import {useFloating, arrow} from '@floating-ui/react-native';
 
@@ -182,6 +184,6 @@ function App() {
 
 ## Updating middleware
 
-If you intend to make `middleware` dynamic, ensure you call
-`update()` whenever the state changes to compute the new
-position.
+If you intend to make `middleware{:.objectKey}` dynamic, ensure
+you call `update(){:js}` whenever the state changes to compute
+the new position.
